SELECT popup should respect to the minimum font size setting

Correctly propagate minimum font size settings to page popups.

BUG=634285

Review-Url: https://codereview.chromium.org/2359663003
Cr-Commit-Position: refs/heads/master@{#419989}

Former-commit-id: 9a66a83a22f1b06015b810bff589c8eb80828ce6